syntax = "proto3";
package TavernHelios.GrpcContract;
option csharp_namespace = "GrpcContract.ReservationService";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/wrappers.proto";

import "CommonMessages.proto";

service ReservationService {
	rpc GetReservations(ReservationQueryRequest) returns (ReservationsReply);
	rpc AddReservation(Reservation) returns (ReservationsReply);
	rpc UpdateReservation(Reservation) returns (ReservationsReply);
	rpc DeleteReservation(IdRequest) returns (IdReply);
}

message Reservation{
	string Id = 1;
	string PersonId = 2;
	google.protobuf.Timestamp Date = 3;
	string TableName = 4;
	int32 SeatNumber = 5;
	repeated string DishIds = 6;
	bool IsDeleted = 7;
}

message ReservationsReply{
	repeated Reservation Reservations = 1;
	ReplyState State = 2;
	repeated string Messages = 3;
}

//Запрос на получение бронирований. Условия налагаются по "И"
message ReservationQueryRequest
{
	optional int64 ReservationId = 1;
	optional string PersonId = 2;
	optional string DishId = 3;
	optional google.protobuf.Timestamp BeginDate = 4;
	optional google.protobuf.Timestamp EndDate = 5;
	optional bool IsDeleted = 6;
}

